--- a/website/v3/docs/comparison.mdx
+++ b/website/v3/docs/comparison.mdx
@@ -10,7 +10,7 @@ This comparison highlights the main differences when using Yoga instead of Apoll
 
 ### No Framework-specific Packages
 
-One of the goals of graphql-yoga was to have as few `graphql-yoga` packages as possible.
+One of the goals of `graphql-yoga` is to have as few `graphql-yoga` packages as possible.
 Yoga is designed around the W3C Request/Response specification (often just referred to as ["Fetch API"](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)),
 which is already adopted by deno, cloudflare workers, and browsers.
 
