--- a/website/v3/docs/migration/migration-from-apollo-server.mdx
+++ b/website/v3/docs/migration/migration-from-apollo-server.mdx
@@ -135,4 +135,4 @@ query AB($postId: ID!) {
 }
 ```
 
-You can learn more on how to get the best out of this in our ["Unlease the power of Fragments with GraphQL Codegen" article](https://the-guild.dev/blog/unleash-the-power-of-fragments-with-graphql-codegen).
+You can learn more on how to get the best out of this in our ["Unleash the power of Fragments with GraphQL Codegen" article](https://the-guild.dev/blog/unleash-the-power-of-fragments-with-graphql-codegen).
