update ws integration docs

--- a/website/docs/features/subscriptions.mdx
+++ b/website/docs/features/subscriptions.mdx
@@ -266,24 +266,26 @@ Also, you can set `subscriptionsProtocol` in GraphiQL options to use WebSockets 
 `yoga-with-ws.ts`
 
 ```ts
-import { createServer } from '@graphql-yoga/node'
+import { createServer } from 'http'
 import { WebSocketServer } from 'ws'
+import { createServer } from 'graphql-yoga'
 import { useServer } from 'graphql-ws/lib/use/ws'
 
 async function main() {
-  const yogaApp = createServer({
+  const yoga = createYoga({
     graphiql: {
       // Use WebSockets in GraphiQL
       subscriptionsProtocol: 'WS',
     },
   })
 
-  // Get NodeJS Server from Yoga
-  const httpServer = await yogaApp.start()
+  // Create NodeJS Server from Yoga
+  const server = createServer(yoga)
+
   // Create WebSocket server instance from our Node server
-  const wsServer = new WebSocketServer({
-    server: httpServer,
-    path: yogaApp.getAddressInfo().endpoint,
+  const wss = new WebSocketServer({
+    server,
+    path: '/graphql',
   })
 
   // Integrate Yoga's Envelop instance and NodeJS server with graphql-ws
@@ -293,7 +295,7 @@ async function main() {
       subscribe: (args: any) => args.rootValue.subscribe(args),
       onSubscribe: async (ctx, msg) => {
         const { schema, execute, subscribe, contextFactory, parse, validate } =
-          yogaApp.getEnveloped(ctx)
+          yogaApp.getEnveloped({ ...ctx, ...ctx.extra })
 
         const args = {
           schema,
@@ -312,8 +314,10 @@ async function main() {
         return args
       },
     },
-    wsServer,
+    wss,
   )
+
+  server.listen(4000)
 }
 
 main().catch((e) => {
