--- a/website/src/pages/docs/integrations/integration-with-deno.mdx
+++ b/website/src/pages/docs/integrations/integration-with-deno.mdx
@@ -9,13 +9,13 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 ## Example
 
 ```ts filename="deno-example.ts"
-import { serve } from 'https://deno.land/std@0.117.0/http/server.ts'
-import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common?dts'
+import { serve } from 'https://deno.land/std/http/server.ts'
+import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common'
 
 const graphQLServer = createServer()
 
 serve(graphQLServer, {
-  addr: ':4000',
+  port: 4000,
 })
 
 console.log('Server is running on http://localhost:4000/graphql')
