--- a/website/v3/docs/integrations/integration-with-deno.mdx
+++ b/website/v3/docs/integrations/integration-with-deno.mdx
@@ -11,19 +11,41 @@ We will use `graphql-yoga` which has an agnostic HTTP handler using [Fetch API](
 
 ## Example
 
-`deno-example.ts`
+Create a `deno-yoga.ts` file;
 
 ```ts
-import { serve } from 'https://deno.land/std@0.117.0/http/server.ts'
-import { createYoga } from 'https://cdn.skypack.dev/graphql-yoga?dts'
+import { createYoga, createSchema } from 'npm:graphql-yoga'
 
-const yoga = createYoga()
-
-serve(yoga, {
-  addr: ':4000',
+const yoga = createYoga({
+  schema: createSchema({
+    typeDefs: /* GraphQL */ `
+      type Query {
+        hello: String!
+      }
+    `,
+    resolvers: {
+      Query: {
+        hello: () => 'Hello Deno!',
+      },
+    },
+  }),
 })
 
-console.log('Server is running on http://localhost:4000/graphql')
+Deno.serve(
+  async (req) => {
+    const res = await yoga.handleRequest(req)
+    return new Response(res.body, res)
+  },
+  {
+    port: 4000,
+  },
+)
+```
+
+And run it;
+
+```bash
+deno run --allow-net --allow-env --allow-read --import-map=../../import-map.json --unstable --compat index.ts
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/deno)
