--- a/website/v3/docs/integrations/integration-with-deno.mdx
+++ b/website/v3/docs/integrations/integration-with-deno.mdx
@@ -45,7 +45,7 @@ Deno.serve(
 And run it;
 
 ```bash
-deno run --allow-net --allow-env --allow-read --import-map=../../import-map.json --unstable --compat index.ts
+deno run --allow-net --allow-env --allow-read --unstable --compat index.ts
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/deno)
