--- a/website/src/pages/docs/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nextjs.mdx
@@ -32,3 +32,45 @@ export default createServer<{
   You can also check a full example on our GitHub repository
   [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs).
 </Callout>
+
+## NextAuth.js
+
+[NextAuth.js](https://next-auth.js.org/) is a popular solution for doing authentication within a Next.js application.
+
+You can easily type and add the session to the GraphQL context by adjusting your GraphQL router handler to the following.
+
+```ts filename="pages/aрi/graphql.ts"
+import { createServer } from '@graphql-yoga/node'
+import type { NextApiRequest, NextApiResponse } from 'next'
+import type { Session } from 'next-auth'
+import { getSession } from 'next-auth/react'
+
+export const config = {
+  api: {
+    // Disable body parsing (required for file uploads)
+    bodyParser: false,
+  },
+}
+
+export default createServer<
+  {
+    req: NextApiRequest
+    res: NextApiResponse
+  },
+  {
+    session: Session
+  }
+>({
+  context: async ({ req }) => {
+    return {
+      session: await getSession({ req }),
+    }
+  }
+})
+```
+
+
+<Callout>
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs-auth).
+</Callout>
