--- a/website/src/pages/tutorial/basic/04-a-simple-query.mdx
+++ b/website/src/pages/tutorial/basic/04-a-simple-query.mdx
@@ -94,7 +94,7 @@ Let's walk through the numbered comments again:
 
 Go ahead and test the implementation by running the server and navigating to `http://localhost:4000/graphql` in your browser. If you expand the documentation of the GraphiQL, you'll notice that another field on the root `Query` object type called `feed` is now available:
 
-![another `Query` root type field called feed](../../../../public/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
+![another `Query` root type field called feed](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
 
 Try it out by sending the following query operation via GraphiQL:
 
@@ -124,7 +124,7 @@ Awesome, the server responds with the data you defined in `links`:
 }
 ```
 
-![data returned from the server](../../../../public/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)
+![data returned from the server](/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)
 
 Feel free to play around with the query by removing any fields from the selection set and observing the responses sent by the server.
 
