--- a/website/src/pages/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/src/pages/tutorial/basic/05-a-simple-mutation.mdx
@@ -118,7 +118,7 @@ The server response will look as follows:
 }
 ```
 
-![Mutation response](../../../../public/assets/tutorial/basic/05-a-simple-mutation/post-link-mutation-response.png)
+![Mutation response](/assets/tutorial/basic/05-a-simple-mutation/post-link-mutation-response.png)
 
 With every mutation you send, the `idCount` will increase and the following IDs for created links will be `link-2`,
 `link-3`, and so forth...
@@ -127,7 +127,7 @@ To verify that your mutation worked, you can send the `feed` query operation fro
 
 The link that you created with the mutation:
 
-![returns the additional Link](../../../../public/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
+![returns the additional Link](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
 
 However, once you kill and restart the server, you'll notice that the previously added links are now gone, and you need
 to add them again. This is because the links are only stored _in-memory_, in the `links` array. In the next sections,
