--- a/website/src/pages/docs/features/subscriptions.mdx
+++ b/website/src/pages/docs/features/subscriptions.mdx
@@ -95,11 +95,8 @@ data: {"data":{"countdown":0}}
 ### GraphQL Subscriptions with Server-Sent Events
 
 <iframe
-  className="mt-6 h-[400px] w-full"
-  src="https://www.youtube.com/embed/oZtTut7QsZ8"
+  src="https://youtube.com/embed/oZtTut7QsZ8"
   title="GraphQL Subscriptions with Server Sent Events"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
 />
 
 ## Handling Subscriptions on the Client
