--- a/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -16,11 +16,8 @@ You will want to use the package `@graphql-yoga/common` which has an agnostic HT
 </Callout>
 
 <iframe
-  className="mt-6 h-[400px] w-full"
-  src="https://www.youtube.com/embed/xibiwSXMLsc"
+  src="https://youtube.com/embed/xibiwSXMLsc"
   title="Using GraphQL Yoga with Cloudflare Workers, and KV"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
 />
 
 ## Installation
