--- a/website/src/pages/tutorial/basic/index.mdx
+++ b/website/src/pages/tutorial/basic/index.mdx
@@ -26,7 +26,8 @@ You are going to use the following technologies:
   GraphQL resolvers
 
 <Callout>
-  You can find the [code of the tutorial in this repository](https://github.com/dotansimha/graphql-yoga/tree/master/examples/hackernews).
+  You can find the [code of the tutorial in this
+  repository](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/hackernews).
 </Callout>
 
 ## What to Expect
