--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -55,8 +55,9 @@ For serverless/edge (service worker) environments, the size of the server code c
 
 Here you can see a comparison of bundle sizes:
 
-- [https://bundlephobia.com/package/graphql-yoga@x.x.x](Bundlephobia graphql-yoga)
-- [https://bundlephobia.com/package/apollo-server-micro@x.x.x](Bundlephobia apollo-server-micro)
+- [Bundlephobia graphql-yoga](https://bundlephobia.com/package/graphql-yoga@x.x.x)
+
+- [Bundlephobia apollo-server-micro](https://bundlephobia.com/package/apollo-server-micro@x.x.x)
 
 GraphQL Yoga only has a fraction of the dependencies of Apollo Server, and in general is much smaller.
 
