--- a/website/src/pages/v3/index.mdx
+++ b/website/src/pages/v3/index.mdx
@@ -17,11 +17,11 @@ import { PackageCmd } from '@theguild/components'
 You will need to provide schema to Yoga, either by an existing executable schema, or by providing your type definitions and resolver map.
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         hello: String
@@ -32,7 +32,7 @@ const yoga = createYoga({
         hello: () => 'Hello from Yoga!',
       },
     },
-  },
+  }),
 })
 
 const server = createServer(yoga)
