--- a/website/src/pages/v3/integrations/integration-with-sveltekit.mdx
+++ b/website/src/pages/v3/integrations/integration-with-sveltekit.mdx
@@ -24,11 +24,11 @@ In a SvelteKit project:import { PackageCmd } from '@theguild/components';
 Create the file `src/routes/api/graphql.ts`:
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import type { RequestEvent } from '@sveltejs/kit'
 
 const yogaApp = createYoga<RequestEvent>({
-  schema: {
+  schema: createSchema({
     typeDefs: `
 			type Query {
 				hello: String
@@ -39,7 +39,7 @@ const yogaApp = createYoga<RequestEvent>({
         hello: () => 'SvelteKit - GraphQL Yoga',
       },
     },
-  },
+  }),
   // Needed to be defined explicitly because our endpoint lives at a different path other than `/graphql`
   graphqlEndpoint: '/api/graphql',
 })
