--- a/website/src/pages/v3/features/error-masking.mdx
+++ b/website/src/pages/v3/features/error-masking.mdx
@@ -15,12 +15,12 @@ Exposing such information to the outside world can make you vulnerable for targe
 Let's setup a simple schema that calls a remote service that is unavailable.
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { fetch } from '@whatwg-node/fetch'
 
 // Provide your schema
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         greeting: String!
@@ -38,7 +38,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -99,12 +99,12 @@ node server.js
 ```
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { fetch } from '@whatwg-node/fetch'
 
 // Provide your schema
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         greeting: String!
@@ -122,7 +122,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 const server = createServer(yoga)
@@ -173,7 +173,7 @@ This can be achieved by throwing a `GraphQLError` instead of a "normal" [`Error`
 E.g. you might want to throw an error if a resource cannot be found by an ID.
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { GraphQLError } from 'graphql'
 
 const users = [
@@ -193,7 +193,7 @@ const users = [
 
 // Provide your schema
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type User {
         id: ID!
@@ -215,7 +215,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -260,7 +260,7 @@ Sometimes it is useful to enrich errors with additional information, such as an 
 Error extensions can be passed as the second parameter to the `GraphQLError` constructor.
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createSchema, createServer } from 'graphql-yoga'
 import { GraphQLError } from 'graphql'
 
 const users = [
@@ -280,7 +280,7 @@ const users = [
 
 // Provide your schema
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type User {
         id: ID!
@@ -310,7 +310,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 // Start the server and explore http://localhost:4000/graphql
