Give another try

--- a/website/src/pages/v3/integrations/integration-with-bun.mdx
+++ b/website/src/pages/v3/integrations/integration-with-bun.mdx
@@ -30,10 +30,7 @@ const yoga = createYoga({
     },
   }),
 })
-const server = Bun.serve({
-  fetch: yoga,
-  port: 4000,
-})
+const server = Bun.serve(yoga)
 console.info(
   `Server is running on ${new URL(yoga.graphqlEndpoint, server.hostname)}`,
 )
