--- a/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
@@ -1,4 +1,5 @@
 import { Callout } from '@theguild/components'
+import { Accordion } from './accordion'
 
 # Connecting the Server and Database with Prisma Client
 
@@ -32,8 +33,11 @@ export async function createContext(): Promise<GraphQLContext> {
 
 Now, you'll need to import the `createContext` function and make sure you add it as part of the GraphQL execution process:
 
+<Accordion title="v2">
+
 ```typescript
-// ... other imports ...
+import { createServer } from '@graphql-yoga/node'
+import { schema } from './schema'
 import { createContext } from './context'
 
 async function main() {
@@ -43,6 +47,27 @@ async function main() {
 
 main()
 ```
+
+</Accordion>
+
+<Accordion title="v3" initiallyOpen>
+
+```typescript
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
+import { schema } from './schema'
+import { createContext } from './context'
+
+function main() {
+  const yoga = createYoga({ schema, context: createContext })
+  const server = createServer(yoga)
+  server.listen(4000)
+}
+
+main()
+```
+
+</Accordion>
 
 In the next step, you'll connect the Prisma client and your GraphQL server!
 
