--- a/website/src/pages/v3/features/subscriptions.mdx
+++ b/website/src/pages/v3/features/subscriptions.mdx
@@ -405,7 +405,7 @@ The `createPubSub` function allows you to specify a custom [`EventTarget`](https
 
 The minimal `EventTarget` implementation is described by the [`TypedEventTarget` interface](https://github.com/dotansimha/graphql-yoga/blob/master/packages/event-target/typed-event-target/src/typed-event-target.ts).
 
-Yoga comes with an `EventTarget` implementation for [Redis Pub/Sub](https://redis.io/docs/manual/pubsub/).import { PackageCmd } from '@theguild/components';
+Yoga comes with an `EventTarget` implementation for [Redis Pub/Sub](https://redis.io/docs/manual/pubsub/).
 
 <PackageCmd packages={['@graphql-yoga/redis-event-target ioredis']} />
 
